# amrcg

./: package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  main.rs
